<resources>
    <string name="app_name">Vegas</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="sz_let_si_d_tum">Születési Dátum:</string>
    <string name="felhaszn_l_n_v">Felhasználónév</string>
    <string name="e_mail_c_m">E-mail cím</string>
    <string name="jelsz_m_gegyszer">Jelszó még egyszer</string>
    <string name="jelsz">Jelszó</string>
    <string name="n_v">Név</string>
    <string name="felhasznal_n_v">Felhasznalónév</string>
    <string name="regisztr_l_s">Regisztrálás</string>
    <string name="vegas_bili_rd">Vegas Biliárd</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="id_pont_lemond_s">Időpont lemondás</string>
    <string name="foglalt_id_pontok">Foglalt időpontok</string>
    <string name="m_gse">Mégse</string>
    <string name="pool">Pool</string>
    <string name="snooker">Snooker</string>
    <string name="darts">Darts</string>
    <string name="id_pont_foglal_s">Időpont foglalás</string>
    <string name="v_lassz_id_pontot">Válassz időpontot:</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="_23_00">23:00</string>
    <string name="mutasd">Mutasd</string>
    <string name="foglal_s">Foglalás</string>
    <string name="el_rhet_id_pontok">Elérhető időpontok:</string>
    <string name="vissza">Vissza</string>
    <string name="t_rl_s">Lemondás</string>
    <string name="kep1">Pool</string>
    <string name="spinner">spins</string>
</resources>